<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="8dp">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/add_current_place_label" />
    </RelativeLayout>

    <!-- Autocomplete Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/autocomplete_fragment"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_layout"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="4dp" />

    <!-- Google Map Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/autocomplete_fragment" />

    <!-- Zoom In FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_zoom_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/zoom_in"
        app:srcCompat="@drawable/ic_zoom_in"
        app:backgroundTint="@color/white"
        app:tint="@color/black" />

    <!-- Zoom Out FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_zoom_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/zoom_out"
        app:srcCompat="@drawable/ic_zoom_out"
        app:backgroundTint="@color/white"
        app:tint="@color/black" />
</RelativeLayout>
